# bb

./: .gitignore  CHANGELOG.md  CONVENTIONS-short.md  CONVENTIONS.md  INSTALL.md  README.md  ResendVerificationEmail.tsx  TODO.md  VerifyEmailHandler.tsx  billing_settings_api_requirements.md  check_balance_fixed.sql  deno.jsonc  import_map.json  install.sh  test_timestamp.txt  version.ts
.github/workflows/: deno-test.yml  deploy.yml  dui-macos-release.yml  extract-secrets.yml  macos-package.yml  release.yml
api/: CONVENTIONS.md  deno.jsonc  types.ts
api/prompts/: interview.md  system.md
api/scripts/: compile.ts  debug-googledocs.ts  debug_instances.ts  generate_core_tools_manifest.ts  googledocs-test.ts  migrate_conversations.ts  notion-test.ts  sync_models_to_llm_proxy.ts  test_compression-lib.ts  test_compression.ts  update_model_capabilities.ts
api/src/: main.ts
api/src/auth/: config.test.ts  config.ts  index.ts  session.test.ts  session.ts  sessionRegistry.ts  supabaseClientFactory.ts  test_storage_read.ts  test_storage_write.ts  userAuthSession.ts
api/src/collaborations/: collaboration.ts  collaborationManager.ts  index.ts
api/src/controllers/: agentController.ts  baseController.ts  orchestratorController.ts
api/src/data/: modelCapabilities.json  validationRules.json
api/src/dataSources/: dataSourceConnection.ts  dataSourceFactory.ts  dataSourceRegistry.ts  dataSource_manifest.ts
api/src/editor/: projectEditor.ts  projectEditorManager.ts
api/src/errors/: error.ts
api/src/features/: featureService.ts
api/src/llms/: agentCapabilityManager.ts  errorHandler.ts  llm.ts  llmMessage.ts  llmProvider.ts  llmTool.ts  llmToolManager.ts  llmToolTags.tsx  modelCapabilitiesManager.ts  modelRegistryService.ts  resourceManager.ts  taskQueue.ts  tools_manifest.ts  validationEngine.ts  validationRuleService.ts
api/src/logEntries/: formatters.browser.tsx  formatters.console.ts  logEntryFormatterManager.ts  types.ts
api/src/mcp/: mcpManager.ts  (+1 more)
api/tests/: deps.ts  mockData.ts
bui/: .gitignore  BUI_INSTRUCTIONS.md  CONVENTIONS.md  deno.jsonc  package.json
bui/src/: dev.ts  fresh.config.ts  fresh.gen.ts  main.ts  tailwind.config.ts
bui/test/: CacheStatusIndicator.test.tsx  CertificateStatusIndicator.test.tsx  CollaborationHeader.test.tsx  ConversationHeader.test.tsx  ExternalLink.test.tsx  HelpButton.test.tsx  HelpDialog.test.tsx  StatusDialog.test.tsx  ToolBar.test.tsx
bui/tests/: ChatInput.test.tsx  CollaborationTrigger.test.tsx  ConversationTrigger.test.tsx
cli/: CONVENTIONS.md  deno.jsonc
cli/src/: main.ts
deployment/homebrew/: bb.rb
docs/: API.md  BUI.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATION_LOGGING.md  CONVERSATION_MANAGEMENT.md  DUI.md  FILE_HANDLING.md  FORMATTER_IMPLEMENTATION_PLAN.md  LLM_INSTRUCTIONS.md  MACOS_PACKAGE_BUILD_SUMMARY.md  NEW_TOOL.md  README.md  SECURITY.md  TESTING.md  TOOLS.md  TOOL_IO.md  WINDOWS_GUIDE.md  auth-design-discussion.md  bb-datasources-portable-text.md  beyond-better-datasources-and-tools.md  beyond-better-tools.md
docs/api/: features-api.md  subscription-endpoints.md
docs/bui/: overview.md
docs/development/: GUIDELINES.md  README.md  auth-implementation.md  chat-input-autosave.md  chat-input-history.md  chat-input-refactor.md  config-defaults-sync.md  doctor_feature.md  dui_local_server.md  file_suggestions.md  instance-inspector.md  macos_release_process.md  model-capabilities-system.md  model-capabilities-update-process.md  model-sync-to-llm_proxy.md  release_process.md  rewrite_file-tool-guardrails.txt  styling_dynamic_content.md  validation-framework.md  windows_linux_release_planning.md
docs/examples/: notion-portable-text-example.md
docs/user/: README.md  auto-complete-file-suggestions.md  how-bb-works.md  understanding-bb.md  upgrading-bb.md
docs/zarchive/: README.md
dui/: .gitignore  CONVENTIONS.md  TESTING_UPDATES.md  deno.json  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  update-helper.sh  vite.config.ts
dui/scripts/: create_unsigned_config.ts
dui/src/: App.tsx  main.tsx
dui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dui/src-tauri/capabilities/: chat.json  default.json  main.json  oauth.json
dui/src-tauri/config/: log4rs.yaml
dui/src-tauri/icons/: icon.icns
dui/src-tauri/macos/: entitlements.plist
dui/src-tauri/src/: api.rs  bui.rs  config.rs  lib.rs  logging.rs  main.rs  oauth.rs  window_state.rs
dui/src-tauri/src/commands/: api_status.rs  bui_status.rs  config.rs  mod.rs  proxy.rs  server_status.rs  upgrade.rs  version.rs
dui/src-tauri/src/logging/: access.rs  mod.rs  setup.rs
dui/src-tauri/src/proxy/: maintenance.html  mod.rs
dui/src-tauri/windows/fragments/: registry.wxs
dui/src-tauri/windows/locales/: en-US.wxl
investor-pitch-deck/: README.md  index.html  print.css  print.html
llm-proxy/: handlerDeepseek.ts  handlerOpenAI.ts  handlerOpenAICompat.ts
scripts/: BB Manager.applescript  analyze_config_usage.ts  bb-manager.bat  bb-manager.sh  bb_init_wrapper.bat  build.sh  build_macos_binaries.sh  build_macos_package.sh  build_windows_exe.sh  debug-notion.ts  extract-changelog.sh  generate_dui_icons.ts  generate_icons.bat  generate_icons.sh  generate_macos_icons.sh  generate_windows_icons.bat  get_codesigning_keychain_password.sh  get_dui_cert_password.sh  git-commands.ts  git-isRepo.ts  save_codesigning_keychain_password.sh  save_dui_cert_password.sh  test-block-edit-integration.ts  update_version.ts  verify_dui_setup.ts  verify_setup.bat  verify_setup.sh
src/: config.ts
src/shared/: projectRegistry.ts  types.ts
(+1002 files in other folders)
