[package]
name = "beyond-better"
version = "0.6.10"
description = "Beyond Better Desktop App"
authors = ["cngarrison"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "beyond_better_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
serde_yaml = "0.9"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
semver = "1.0"
tempfile = "3.8"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
log4rs = { version = "1.3", features = ["all_components", "yaml_format"] }
chrono = "0.4"
http = "0.2"
hyper = { version = "0.14", features = ["full", "http1", "http2", "client"] }
hyper-tls = "0.5"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
tungstenite = "0.20"

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = "1.0"
tar = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "0.6"
log = "0.4"
env_logger = "0.10"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_ProcessStatus"
] }
